--- a/app/src/main/res/layout/activity_wall_paper.xml
+++ b/app/src/main/res/layout/activity_wall_paper.xml
@@ -42,7 +42,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_10sdp"
             android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
