--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -35,8 +35,8 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/catImage"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="fitXY"
+                    android:layout_height="@dimen/_200sdp"
+                    android:scaleType="centerCrop"
                     app:imageSrc="@{category.imageUrl}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
