--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_white">#2FFFFFFF</color>
     <color name="grey">#C3C0C0</color>
     <color name="medium_grey">#A5A2A2</color>
 </resources>
