--- a/app/src/main/res/layout/activity_wall_paper.xml
+++ b/app/src/main/res/layout/activity_wall_paper.xml
@@ -25,10 +25,12 @@
             app:navigationIcon="@drawable/ic_baseline_arrow_back" />
 
         <TextView
+            android:id="@+id/catName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
             android:gravity="center"
+            android:textSize="@dimen/_14ssp"
             android:text="@string/wallpaper_world"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
