--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.WallpaperWorld" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -19,20 +19,20 @@
         <item name="android:textColor">@color/chip_text_color</item>
     </style>
 
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
-        <!-- Set the splash screen background, animated icon, and animation duration. -->
-        <item name="windowSplashScreenBackground">@color/black</item>
+<!--    <style name="Theme.App.Starting" parent="Theme.SplashScreen">-->
+<!--        &lt;!&ndash; Set the splash screen background, animated icon, and animation duration. &ndash;&gt;-->
+<!--        <item name="windowSplashScreenBackground">@color/black</item>-->
 
-        <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
-             animated drawable. One of these is required. -->
-        <item name="windowSplashScreenAnimatedIcon">@drawable/wall_logo</item>
-        <!-- Required for animated icons -->
-        <item name="windowSplashScreenAnimationDuration">200</item>
+<!--        &lt;!&ndash; Use windowSplashScreenAnimatedIcon to add either a drawable or an-->
+<!--             animated drawable. One of these is required. &ndash;&gt;-->
+<!--        <item name="windowSplashScreenAnimatedIcon">@drawable/wall_logo</item>-->
+<!--        &lt;!&ndash; Required for animated icons &ndash;&gt;-->
+<!--        <item name="windowSplashScreenAnimationDuration">200</item>-->
 
-        <!-- Set the theme of the Activity that directly follows your splash screen. -->
-        <!-- Required -->
-        <item name="postSplashScreenTheme">@style/Theme.WallpaperWorld</item>
-    </style>
+<!--        &lt;!&ndash; Set the theme of the Activity that directly follows your splash screen. &ndash;&gt;-->
+<!--        &lt;!&ndash; Required &ndash;&gt;-->
+<!--        <item name="postSplashScreenTheme">@style/Theme.WallpaperWorld</item>-->
+<!--    </style>-->
 
 
 </resources>
