ads integrated, add categories, download and share

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_white">#2FFFFFFF</color>
     <color name="grey">#C3C0C0</color>
-    <color name="medium_grey">#A5A2A2</color>
+    <color name="medium_grey">#BAB6B6</color>
 </resources>
